--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "css-loader": "^0.28.11",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "moment": "^2.22.2",
     "nodemon": "^1.17.5",
