--- a/package.json
+++ b/package.json
@@ -40,6 +40,10 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
+    "grunt": "^1.0.3",
+    "grunt-aws": "^0.6.2",
+    "grunt-contrib-cssmin": "^2.2.1",
+    "grunt-contrib-watch": "^1.1.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.1.0",
     "regenerator-runtime": "^0.11.1",
