docker-compose fixed to wait for db before sidebar runs; time bug with closing times past 12:00am

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,5 @@
 version: '2'
 services:
-  web:
-    image: phwu123/side
-    networks:
-      [webnet]
-    ports:
-      - "3002:3002"
-    depends_on:
-      - db
-    environment:
-      DB_HOST: db
-    links:
-      - db
-    command: npm start
   db:
     image: postgres:9.6
     networks:
@@ -27,6 +14,19 @@ services:
     image: phwu123/prox
     ports:
       - "3900:3900"
+  web:
+    depends_on:
+      - db
+    image: phwu123/side
+    command: bash -c "sleep 5; npm start"
+    networks:
+      [webnet]
+    ports:
+      - "3002:3002"
+    environment:
+      DB_HOST: db
+    links:
+      - db
 volumes: 
   db-data:
 networks:
