[mongo-data] Converted to MongoDB

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.16.3",
     "faker": "^4.1.0",
     "moment": "^2.22.2",
+    "mongoose": "^5.1.6",
     "nodemon": "^1.17.5",
     "pg": "^7.4.3",
     "react": "^16.4.0",
