[stress-testing] Set up artillery and successfully utilize all 4 endpoints

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "faker": "^4.1.0",
     "moment": "^2.22.2",
     "mongoose": "^5.1.6",
+    "newrelic": "^4.2.0",
     "nodemon": "^1.17.5",
     "pg": "^7.4.3",
     "react": "^16.4.0",
