--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
 node_modules
-hours.tsv
-details.tsv
-misc.tsv
-hours.csv
-details.csv
-misc.csv
+static/dataFiles
 static/bundle.js
+newrelic_agent.log
